[package]
name = "unsigned-float"
version = "0.2.1"
edition = "2024"
description = "Unsigned floating-point formats for non-negative numeric domains."
license = "MIT"
repository = "https://github.com/MicroPerceptron/ufloat"
readme = "README.md"
keywords = ["float", "unsigned", "no-std", "numeric", "fp"]
categories = ["data-structures", "mathematics", "no-std", "science"]

[features]
default = []
soft-float = []
f16 = []
f128 = []
nightly = ["f16", "f128"]

[dependencies]
libm = "0.2"

[build-dependencies]
libm = "0.2"

[package.metadata.docs.rs]
all-features = true
